--- a/public/clientes.html
+++ b/public/clientes.html
@@ -93,14 +93,14 @@
               gap: 12px;
             "
           >
-            <label>Nombre <input name="nombre" required /></label>
-            <label>Apellido <input name="apellido" /></label>
+            <label>Nombre <input name="nombre" required oninput="this.value = this.value.toUpperCase()" /></label>
+            <label>Apellido <input name="apellido" required oninput="this.value = this.value.toUpperCase()" /></label>
             <label>Teléfono <input name="telefono" /></label>
             <label>Email <input name="email" type="email" /></label>
-            <label>Dirección <input name="direccion" /></label>
-            <label>Ciudad <input name="ciudad" /></label>
+            <label>Dirección <input name="direccion" required oninput="this.value = this.value.toUpperCase()" /></label>
+            <label>Ciudad <input name="ciudad" required oninput="this.value = this.value.toUpperCase()" /></label>
             <label style="grid-column: 1/-1"
-              >Notas <input name="notas"
+              >Notas <input name="notas" required oninput="this.value = this.value.toUpperCase()"
             /></label>
           </div>
           <div style="margin-top: 12px; display: flex; gap: 8px">
